added tax tracker repo endpoints
